--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Read me
+Script to delete all of a users tweets and likes from their account.
+Some limitations due to the number of calls the Tweepy API allows. 
+Keys and tokens are added using a .env file
